Remove extra code and add comments

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
           <section id="getRectangleArea" class="">
 
-            <h3>Click button to get rectangle area</h3>
+            <h3>Get rectangle area</h3>
             <p>
               <button type="button" class="btn btn-lg btn-success" onclick="areaOfRect()">Get Area</button>
             </p>
@@ -132,7 +132,7 @@
 
           <section id="getCircleArea" class="">
 
-            <h3>Click button to get circle area</h3>
+            <h3>Get circle area</h3>
             <p>
               <button type="button" class="btn btn-lg btn-success" onclick="areaOfCircle()">Get Area</button>
             </p>
@@ -140,7 +140,7 @@
 
           <section id="getSquareArea" class="">
 
-            <h3>Click button to get square area</h3>
+            <h3>Get square area</h3>
             <p>
               <button type="button" class="btn btn-lg btn-success" onclick="areaOfSquare()">Get Area</button>
             </p>
@@ -148,14 +148,14 @@
 
           <section id="getEllipseArea" class="">
 
-            <h3>Click button to get ellipse area</h3>
+            <h3>Get ellipse area</h3>
             <p>
               <button type="button" class="btn btn-lg btn-success" onclick="areaOfEllipse()">Get Area</button>
             </p>
           </section>
 
           <div id="clearStorage" class="">
-            <h3>Click button to clear local storage</h3>
+            <h4>Clear local storage</h4>
             <p>
               <button type="button" class="btn btn-xs btn-danger" onclick="clearLocalStorage()">Clear Storage</button>
             </p>
@@ -173,7 +173,6 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-<!--    <script src="js/docs.min.js"></script> -->
     <script src="js/holder.js"></script>
     <script src="js/script.js"></script>
     <script src="js/include.js"></script>
