--- a/index.html
+++ b/index.html
@@ -176,5 +176,6 @@
     <script src="js/holder.js"></script>
     <script src="js/script.js"></script>
     <script src="js/include.js"></script>
+    <script src="js/mainscript.js"></script>    
   </body>
 </html>
