--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <div id="jumbotron" class="">
             <div class="jumbotron">
               <h1>Shape Area Calculations</h1>
-              <p>This is small app to calculate area of a selected shape. Local storage api has been used to develop this small app. No server side scripting is involved.</p>
+              <p>This is a small app to calculate area of a selected shape. Local storage api has been used to develop this small app. No server side scripting is involved.</p>
             </div>
           </div>
           <div id="homeDetails" class="">
